--- a/myapp/.github/workflows/maven-publish.yml
+++ b/myapp/.github/workflows/maven-publish.yml
@@ -17,7 +17,9 @@
 
 name: maven-hello-world
 run-name: ${{ github.actor }} is learning GitHub Actions
-on: [push]
+on: 
+    push:
+        branches: ["feat/kfir"]
 jobs:
     version:
         runs-on: ubuntu-latest
