--- a/myapp/.github/workflows/maven-publish.yml
+++ b/myapp/.github/workflows/maven-publish.yml
@@ -1,5 +1,4 @@
 name: maven-hello-world
-run-name: ${{ github.actor }} is learning GitHub Actions
 on: [push]
 
 jobs:
@@ -15,7 +14,7 @@ jobs:
             cache: maven
           
         - name: update version with Maven
-          run: mvn --batch-mode release:update-versions
+          run: mvn --batch-mode release:update-versions --file pom.xml
          
         - name: Package
           run: mvn -B package --file pom.xml
