feat(workflow): testing

--- a/myapp/.github/workflows/maven-publish.yml
+++ b/myapp/.github/workflows/maven-publish.yml
@@ -14,7 +14,11 @@ jobs:
             cache: maven
           
         - name: update version with Maven
-          run: mvn --batch-mode release:update-versions --file pom.xml
+          run: |
+           ls -la
+           cd myapp
+           mvn -B release:update-versions --file pom.xml
+           
          
         - name: Package
           run: mvn -B package --file pom.xml
