--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -4,6 +4,8 @@ on: [push]
 jobs:
     version:
         runs-on: ubuntu-latest
+        outputs:
+            output1: ${{steps.Version.outputs.version}}
         steps:
         - uses: actions/checkout@v4
         - name: Set up JDK 17
@@ -12,10 +14,33 @@ jobs:
             java-version: '17'
             distribution: 'temurin'
             cache: maven
-          
         - name: update version with Maven
           run: mvn -B release:update-versions --file ./myapp/pom.xml
+        - name: Version
+          run: |
+            VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+            echo "version=$VERSION" >> "$GITHUB_OUTPUT"
            
          
-        - name: Package
-          run: mvn -B package --file ./myapp/pom.xml
+    build-and-push:
+        runs-on: ubuntu-latest
+        needs: version
+        steps:
+            - env:
+                VERSION: ${{needs.version.outputs.version}}
+            - name: Login to Docker Hub
+              uses: docker/login-action@v3
+              with:
+                username: barryallen696
+                password: GcKLXFcV@W3qKd5
+            - name: Build and push
+              uses: docker/build-push-action@v5
+              with:
+                context: .
+                push: true
+                tags: barryallen696/maven:$VERSION
+         
+          
+ # multi-stage dockerfile example: https://stackoverflow.com/questions/27767264/how-to-dockerize-maven-project-and-how-many-ways-to-accomplish-it
+ # marketplace: https://github.com/marketplace
+ # build and push action: https://github.com/marketplace/actions/build-and-push-docker-images#examples
