--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -26,19 +26,20 @@ jobs:
         runs-on: ubuntu-latest
         needs: version
         steps:
-            - env:
-                VERSION: ${{needs.version.outputs.version}}
+
             - name: Login to Docker Hub
               uses: docker/login-action@v3
               with:
                 username: barryallen696
                 password: GcKLXFcV@W3qKd5
-            - name: Build and push
-              uses: docker/build-push-action@v5
-              with:
-                context: .
-                push: true
-                tags: barryallen696/maven:$VERSION
+            - env:
+                VERSION: ${{needs.version.outputs.version}}
+                name: Build and push
+                uses: docker/build-push-action@v5
+                with:
+                  context: .
+                  push: true
+                  tags: barryallen696/maven:$VERSION
          
           
  # multi-stage dockerfile example: https://stackoverflow.com/questions/27767264/how-to-dockerize-maven-project-and-how-many-ways-to-accomplish-it
