--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -2,7 +2,7 @@ name: maven-hello-world
 on: [push]
 
 jobs:
-    version:
+    version-job:
         runs-on: ubuntu-latest
         outputs:
             output1: ${{steps.Version.outputs.version}}
@@ -19,21 +19,21 @@ jobs:
         - name: Version
           run: |
             VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+            echo $VERSION
             echo "version=$VERSION" >> "$GITHUB_OUTPUT"
            
          
     build-and-push:
         runs-on: ubuntu-latest
-        needs: version
+        needs: version-job
         steps:
-
             - name: Login to Docker Hub
               uses: docker/login-action@v3
               with:
                 username: barryallen696
                 password: GcKLXFcV@W3qKd5
             - env:
-                VERSION: ${{needs.version.outputs.version}}
+                VERSION: ${{needs.version-job.outputs.version}}
               name: Build and push
               uses: docker/build-push-action@v5
               with:
