--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -39,7 +39,7 @@ jobs:
               with:
                 context: .
                 push: true
-                tags: barryallen696/maven:$VERSION
+                tags: barryallen696/maven:69
          
           
  # multi-stage dockerfile example: https://stackoverflow.com/questions/27767264/how-to-dockerize-maven-project-and-how-many-ways-to-accomplish-it
