--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -37,7 +37,7 @@ jobs:
               name: Build and push
               uses: docker/build-push-action@v5
               with:
-                context: .
+                context: ./myapp
                 push: true
                 tags: barryallen696/maven:69
          
