--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -27,6 +27,8 @@ jobs:
         runs-on: ubuntu-latest
         needs: version-job
         steps:
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
             - name: Login to Docker Hub
               uses: docker/login-action@v3
               with:
