--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -39,7 +39,7 @@ jobs:
               name: Build and push
               uses: docker/build-push-action@v5
               with:
-                context: ./myapp
+                context: .
                 push: true
                 tags: barryallen696/maven:69
          
