--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -32,8 +32,8 @@ jobs:
             - name: Login to Docker Hub
               uses: docker/login-action@v3
               with:
-                username: barryallen696
-                password: GcKLXFcV@W3qKd5
+                username: ${{DOCKER_USERNAME}}
+                password: ${{DOCKER_PASSWORD}}
             - env:
                 VERSION: ${{needs.version-job.outputs.version}}
               name: Build and push
