--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -2,7 +2,7 @@ name: maven-hello-world
 on: [push]
 
 jobs:
-    version-job:
+    build-and-push:
         runs-on: ubuntu-latest
         outputs:
             output1: ${{steps.Version.outputs.version}}
@@ -22,27 +22,23 @@ jobs:
             echo $VERSION
             echo "version=$VERSION" >> "$GITHUB_OUTPUT"
            
-         
-    build-and-push:
-        runs-on: ubuntu-latest
-        needs: version-job
-        steps:
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
-            - name: Login to Docker Hub
-              uses: docker/login-action@v3
-              with:
-                username: ${{secrets.DOCKER_USERNAME}}
-                password: ${{secrets.DOCKER_PASSWORD}}
-            - env:
-                VERSION: ${{needs.version-job.outputs.version}}
-              name: Build and push
-              uses: docker/build-push-action@v5
-              with:
-                # context: .
-                push: true
-                tags: barryallen696/maven:69
-         
+   
+        # - name: Set up Docker Buildx
+          # uses: docker/setup-buildx-action@v3
+        - name: Login to Docker Hub
+          uses: docker/login-action@v3
+          with:
+            username: ${{secrets.DOCKER_USERNAME}}
+            password: ${{secrets.DOCKER_PASSWORD}}
+        - env:
+            VERSION: ${{needs.version-job.outputs.version}}
+          name: Build and push
+          uses: docker/build-push-action@v5
+          with:
+            # context: .
+            push: true
+            tags: barryallen696/maven:69
+     
           
  # multi-stage dockerfile example: https://stackoverflow.com/questions/27767264/how-to-dockerize-maven-project-and-how-many-ways-to-accomplish-it
  # marketplace: https://github.com/marketplace
