--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -21,24 +21,17 @@ jobs:
             VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
             echo $VERSION
             echo "version=$VERSION" >> "$GITHUB_OUTPUT"
-           
-   
-        - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v3
-        - name: Login to Docker Hub
-          uses: docker/login-action@v3
-          with:
-            username: ${{secrets.DOCKER_USERNAME}}
-            password: ${{secrets.DOCKER_PASSWORD}}
-        - env:
-            VERSION: ${{needs.version-job.outputs.version}}
-          name: Build and push
-          uses: docker/build-push-action@v5
-          with:
-            # context: .
-            push: true
-            tags: barryallen696/maven:69
-     
+
+          - uses: mr-smithers-excellent/docker-build-push@v6
+            name: Build & push Docker image
+            with:
+              image: barryallen696/maven
+              tags: $VERSION
+              registry: docker.io
+              dockerfile: Dockerfile
+              username: ${{ secrets.DOCKER_USERNAME }}
+              password: ${{ secrets.DOCKER_PASSWORD }}
+             
           
  # multi-stage dockerfile example: https://stackoverflow.com/questions/27767264/how-to-dockerize-maven-project-and-how-many-ways-to-accomplish-it
  # marketplace: https://github.com/marketplace
