--- a/myapp/Dockerfile
+++ b/myapp/Dockerfile
@@ -1,7 +1,7 @@
 FROM maven:3.5-jdk-8-alpine as builder
 
 COPY src /usr/src/myapp/src
-COPY pom.xml /usr/src/myapp
+COPY ./myapp/pom.xml /usr/src/myapp
 
 RUN mvn -f /usr/src/myapp/pom.xml clean package
 
