--- a/myapp/Dockerfile
+++ b/myapp/Dockerfile
@@ -1,8 +1,8 @@
 FROM maven:3.5-jdk-8-alpine as builder
 
 WORKDIR ./myapp
-COPY src /usr/src/myapp/src
-COPY /pom.xml /usr/src/myapp
+COPY src/ /usr/src/myapp/src
+COPY pom.xml /usr/src/myapp
 
 RUN mvn -f /usr/src/myapp/pom.xml clean package
 
