--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -26,19 +26,32 @@ jobs:
             echo $VERSION
             echo "VERSION=$VERSION" >> "$GITHUB_OUTPUT"
 
-        - uses: mr-smithers-excellent/docker-build-push@v6
-          env:
-            VERSION: ${{steps.get-version.outputs.VERSION}}
-          name: Build & push Docker image
+        - name: Login to Docker Hub
+          uses: docker/login-action@v3
           with:
-            image: barryallen696/maven
-            tags: $VERSION
-            registry: docker.io
-            dockerfile: ./myapp/Dockerfile
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
-             
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_PASSWORD }}
+        - name: Build and push
+          uses: docker/build-push-action@v5
+          with:
+            context: .
+            build-args: VERSION=$VERSION
+            push: true
+            tags: barryallen696/maven:latest
           
+#        - uses: mr-smithers-excellent/docker-build-push@v6
+ #         env:
+  #          VERSION: ${{steps.get-version.outputs.VERSION}}
+   #       name: Build & push Docker image
+    #      with:
+     #       image: barryallen696/maven
+      #      tags: $VERSION
+       #     registry: docker.io
+        #    dockerfile: ./myapp/Dockerfile
+         #   username: ${{ secrets.DOCKER_USERNAME }}
+          #  password: ${{ secrets.DOCKER_PASSWORD }}
+
+
  # multi-stage dockerfile example: https://stackoverflow.com/questions/27767264/how-to-dockerize-maven-project-and-how-many-ways-to-accomplish-it
  # marketplace: https://github.com/marketplace
  # build and push action: https://github.com/marketplace/actions/build-and-push-docker-images#examples
