--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -38,7 +38,7 @@ jobs:
         - name: Build and push
           uses: docker/build-push-action@v5
           with:
-            context: .
+            context: ./myapp
             build-args: VERSION=$VERSION
             push: true
             tags: barryallen696/maven:latest
