feat(workflow): testing with dockerfile

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -41,7 +41,7 @@ jobs:
             context: ./myapp
             build-args: VERSION=$VERSION
             push: true
-            tags: barryallen696/maven:latest
+            tags: barryallen696/maven:$VERSION
           
 #        - uses: mr-smithers-excellent/docker-build-push@v6
  #         env:
