--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -37,6 +37,8 @@ jobs:
             
         - name: Build and push
           uses: docker/build-push-action@v5
+          env:
+            VERSION: ${{steps.get-version.outputs.VERSION}}
           with:
             context: ./myapp
             build-args: VERSION=$VERSION
