--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -24,7 +24,7 @@ jobs:
           run: |
             VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
             echo $VERSION
-            echo "VERSION=$VERSION" >> "$GITHUB_OUTPUT"
+            echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
 
         - name: Login to Docker Hub
           uses: docker/login-action@v3
