--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -24,7 +24,7 @@ jobs:
           run: |
             VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
             echo $VERSION
-            echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+            echo "version=$VERSION" >> $GITHUB_OUTPUT
 
         - name: Login to Docker Hub
           uses: docker/login-action@v3
@@ -38,12 +38,12 @@ jobs:
         - name: Build and push
           uses: docker/build-push-action@v5
           env:
-            VERSION: ${{steps.get-version.outputs.VERSION}}
+            TAG: ${{steps.get-version.outputs.version}}
           with:
             context: ./myapp
-            build-args: VERSION=${{VERSION}}
+            build-args: TAG=${{TAG}}
             push: true
-            tags: barryallen696/maven:${{VERSION}}
+            tags: barryallen696/maven:${{TAG}}
           
 #        - uses: mr-smithers-excellent/docker-build-push@v6
  #         env:
