--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -41,7 +41,8 @@ jobs:
             #VERSION: ${{steps.get-version.outputs.version}}
           with:
             context: ./myapp
-            build-args: VERSION=${{steps.get-version.outputs.version}}
+            build-args: |
+              VERSION=${{steps.get-version.outputs.version}}
             push: true
             tags: barryallen696/maven:${{steps.get-version.outputs.version}}
           
