--- a/myapp/Dockerfile
+++ b/myapp/Dockerfile
@@ -10,6 +10,9 @@ RUN mvn -f /usr/src/myapp/pom.xml clean package
 # FROM java:8
 FROM openjdk:8
 
+ARG VERSION
+ARG VERSION ${VERSION}
+
 COPY --from=builder /usr/src/myapp/target/myapp-1.0.3-SNAPSHOT.jar /usr/app/myapp-1.0.3-SNAPSHOT.jar
 
 ENTRYPOINT ["java", "-cp", "/usr/app/myapp-1.0.3-SNAPSHOT.jar", "com.myapp.App"]
