--- a/myapp/pom.xml
+++ b/myapp/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>com.myapp</groupId>
   <artifactId>myapp</artifactId>
-  <version>1.0.2-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <name>myapp</name>
   <!-- FIXME change it to the project's website -->
