--- a/myapp/Dockerfile
+++ b/myapp/Dockerfile
@@ -1,18 +1,19 @@
-FROM maven:3.5-jdk-8-alpine as builder
+# find better base image
+FROM maven:3.5-jdk-8-alpine as builder 
 
-# WORKDIR ./myapp
-RUN whoami
-COPY src /usr/src/myapp/src
+COPY src /usr/src/myapp/src # find a way to remove src before next FROM statement
 COPY pom.xml /usr/src/myapp
 
-RUN mvn -f /usr/src/myapp/pom.xml clean package
+# understand if creating jar inside dockerfile can cause problems - maybe you want to keep the jar?
+RUN mvn -f /usr/src/myapp/pom.xml clean package 
 
 # FROM java:8
-FROM openjdk:8
+FROM openjdk:8 # find better base image
 
 ARG VERSION
 ARG VERSION ${VERSION}
 
-COPY --from=builder /usr/src/myapp/target/myapp-$VERSION.jar /usr/app/myapp-$VERSION.jar
+# understand this command
+COPY --from=builder /usr/src/myapp/target/myapp-$VERSION.jar /usr/app/myapp-$VERSION.jar 
 
-ENTRYPOINT ["java", "-cp", "/usr/app/myapp-$VERSION.jar", "com.myapp.App"]
+ENTRYPOINT ["java", "-cp", "/usr/app/myapp-$VERSION.jar", "com.myapp.App"] # figure out if this needs to be com.myapp.app.App
