feat(workflow): testing workflow with dockerfile

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -2,7 +2,7 @@ name: Maven CI
 on: [push]
 
 jobs:
-    Build and Push:
+    build-and-push:
         runs-on: ubuntu-latest
         steps:
         
