--- a/myapp/Dockerfile
+++ b/myapp/Dockerfile
@@ -1,7 +1,8 @@
 # find better base image
 FROM maven:3.5-jdk-8-alpine as builder 
 
-COPY src /usr/src/myapp/src # find a way to remove src before next FROM statement
+# find a way to remove src before next FROM statement
+COPY src /usr/src/myapp/src 
 COPY pom.xml /usr/src/myapp
 
 # understand if creating jar inside dockerfile can cause problems - maybe you want to keep the jar?
@@ -17,4 +18,5 @@ ARG VERSION ${VERSION}
 # understand this command
 COPY --from=builder /usr/src/myapp/target/myapp-$VERSION.jar /usr/app/myapp-$VERSION.jar 
 
-ENTRYPOINT ["java", "-cp", "/usr/app/myapp-$VERSION.jar", "com.myapp.App"] # figure out if this needs to be com.myapp.app.App
+# figure out if this needs to be com.myapp.app.App
+ENTRYPOINT ["java", "-cp", "/usr/app/myapp-$VERSION.jar", "com.myapp.App"] 
