--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -2,14 +2,13 @@ name: Maven CI
 on: [push]
 
 jobs:
-    build-and-push:
+    build:
         runs-on: ubuntu-latest
         steps:
         
         - uses: actions/checkout@v4
           name: Checkout
         
-        # read about setup-java action and its with parameters (specifically cache and distri)
         - name: Set up JDK 17
           uses: actions/setup-java@v4
           with:
@@ -17,7 +16,7 @@ jobs:
             distribution: 'temurin'
             cache: maven
  
-        - name: update version with Maven
+        - name: Bump
           run: mvn -B release:update-versions --file ./myapp/pom.xml
       
         - name: Get Version
@@ -32,11 +31,10 @@ jobs:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
           
-          # check if this stage is neccesary 
         - name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v3
             
-        - name: Build and push
+        - name: Build and Push
           uses: docker/build-push-action@v5
           with:
             context: ./myapp
@@ -44,3 +42,22 @@ jobs:
               VERSION=${{steps.get-version.outputs.version}}
             push: true
             tags: barryallen696/maven:${{steps.get-version.outputs.version}}
+    
+    
+    # deploy:
+        # runs-on: ubuntu latest
+        # steps:
+        # - uses: actions/checkout@v4
+        
+        # - name: deploy
+          # uses: deliverybot/helm@v1
+          # with:
+            # release: myapp
+            # value-files: ["myapp/myapp/values.yaml"]
+            # namespace: default
+            # chart: 'app'(?)
+            # values: |
+              # name: myapp
+          # env:
+            # KUBECONFIG_FILE: '${{ secrets.KUBECONFIG }}'
+        
