--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,21 +1,63 @@
-name: maven-hello-world
-run-name: ${{ github.actor }} is learning GitHub Actions
+name: Maven CI
 on: [push]
 
 jobs:
-    version:
+    build:
         runs-on: ubuntu-latest
         steps:
+        
         - uses: actions/checkout@v4
+          name: Checkout
+        
         - name: Set up JDK 17
           uses: actions/setup-java@v4
           with:
             java-version: '17'
             distribution: 'temurin'
             cache: maven
+ 
+        - name: Bump
+          run: mvn -B release:update-versions --file ./myapp/pom.xml
+      
+        - name: Get Version
+          id: get-version
+          run: |
+            VERSION=$(mvn help:evaluate -f ./myapp/pom.xml -Dexpression=project.version -q -DforceStdout) # understand this command
+            echo "version=$VERSION" >> $GITHUB_OUTPUT
+
+        - name: Login to Docker Hub
+          uses: docker/login-action@v3
+          with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
           
-        - name: update version with Maven
-          run: mvn --batch-mode release:update-versions
-         
-        - name: Package
-          run: mvn -B package --file pom.xml
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v3
+            
+        - name: Build and Push
+          uses: docker/build-push-action@v5
+          with:
+            context: ./myapp
+            build-args: |
+              VERSION=${{steps.get-version.outputs.version}}
+            push: true
+            tags: barryallen696/maven:${{steps.get-version.outputs.version}}
+    
+    
+    # deploy:
+        # runs-on: ubuntu latest
+        # steps:
+        # - uses: actions/checkout@v4
+        
+        # - name: deploy
+          # uses: deliverybot/helm@v1
+          # with:
+            # release: myapp
+            # value-files: ["myapp/myapp/values.yaml"]
+            # namespace: default
+            # chart: 'app'(?)
+            # values: |
+              # name: myapp
+          # env:
+            # KUBECONFIG_FILE: '${{ secrets.KUBECONFIG }}'
+        
